chore: experimental contrast fix to 4.5:1 [skip ci]

--- a/src/styles/components/footer/footer.scss
+++ b/src/styles/components/footer/footer.scss
@@ -41,6 +41,7 @@ footer {
     }
 
     a {
+      color: $CORPORATE-LIGHT;
       text-decoration: none;
       text-transform: uppercase;
     }
